# kor_based_jap

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: en_words.txt  ko_words.txt
android/app/src/main/assets/licenses/: THIRD_PARTY_LICENSES.txt
android/app/src/main/java/io/github/ccy5123/korjpnime/: KorJpnImeService.kt  KorJpnImeView.kt  MainActivity.kt
android/app/src/main/java/io/github/ccy5123/korjpnime/data/: KeyboardPreferences.kt
android/app/src/main/java/io/github/ccy5123/korjpnime/engine/: BatchimLookup.kt  CheonjiinComposer.kt  ClipboardHistory.kt  Connector.kt  Dictionary.kt  EmojiData.kt  EmojiHistory.kt  HangulComposer.kt  HanjaDictionary.kt  RichDictionary.kt  SyllableTables.kt  UserDict.kt  Viterbi.kt  WordlistDictionary.kt
android/app/src/main/java/io/github/ccy5123/korjpnime/keyboard/: BackspaceKey.kt  BeolsikLayout.kt  CandidateStrip.kt  CheonjiinLayout.kt  ClipboardPanel.kt  EmojiPanel.kt  ExpandedCandidatesPanel.kt  Icons.kt  Key.kt  KeyAction.kt  KeyboardHaptics.kt  KeyboardPreviews.kt  KeyboardSurface.kt  QwertyLayout.kt  TopChrome.kt
android/app/src/main/java/io/github/ccy5123/korjpnime/theme/: KeyboardTheme.kt  OklchColor.kt
android/app/src/main/java/io/github/ccy5123/korjpnime/ui/: LicensesScreen.kt  SettingsActivity.kt  SettingsScreen.kt
android/app/src/main/java/io/github/ccy5123/korjpnime/voice/: VoiceInputActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: method.xml
android/gradle/: libs.versions.toml
dict/: .gitignore  LICENSES.txt  README.md  build_dict.py  build_dict_mozc.py  build_viterbi_data.py  emoji_data.txt  hanja_dict.txt
dict/mozc_src/: .gitignore  fetch.sh
docs/: ANDROID_PLAN.md  ANDROID_UI_WORKFLOW.md  PLAYSTORE.md  RELEASE_NOTES_v1.0.0.ja.md  RELEASE_NOTES_v1.0.0.ko.md  RELEASE_NOTES_v1.0.0.md  _config.yml  index.md  privacy-policy.md
docs/promo/: awesome-list-submissions.md
engine/: __init__.py  base.py  candidate.py  demo.py  dict_client.py  jisho_client.py  mozc_client.py
mapping/: batchim.yaml  syllables.yaml
poc/: converter.py  test_cases.txt
tools/: build_tests.bat  install.ps1  make_release.bat  uninstall.ps1
tsf/: CMakeLists.txt  KorJpnIme.def  build_mingw.bat  build_msvc.bat  install_tip.reg  uninstall_tip.reg
tsf/src/: BatchimLookup.h  CandidateWindow.cpp  CandidateWindow.h  Composition.cpp  Composition.h  Connector.cpp  Connector.h  DebugLog.h  Dictionary.cpp  Dictionary.h  DisplayAttributes.cpp  DisplayAttributes.h  Globals.h  HangulComposer.cpp  KanaConv.h  KeyHandler.cpp  KeyHandler.h  KorJpnIme.cpp  KorJpnIme.h  RichDictionary.cpp  RichDictionary.h  Settings.cpp  Settings.h  UserDict.cpp  UserDict.h  Viterbi.cpp  Viterbi.h  dllmain.cpp  pthread_stub.cpp
tsf/tests/: minitest.h  test_batchim_lookup.cpp  test_hangul_composer.cpp  test_main.cpp  test_viterbi.cpp
tsf/tools/: gen_table.py  test_dll_load.cpp
